--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "async": "^3.1.0",
     "botkit": "^0.4.9",
     "casperjs": "^1.1.4",
-    "crawler": "^1.0.5",
-    "phantomjs-prebuilt": "^2.1.14",
-    "properties": "^1.2.1"
+    "crawler": "^1.2.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "properties": "^1.2.1",
+    "sleep": "^6.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^3.19.0",
-    "eslint-plugin-react": "^7.0.0",
-    "webpack": "^2.5.1"
+    "eslint-plugin-react": "^7.14.2",
+    "webpack": "^2.7.0"
   }
 }
